# dn-ms

./: .env  .gitignore  AGENTS.md  BOOKING-Notes.md  Cargo.toml  README.md  RUST_SKILLS_CHECKLIST.md  SKILL.md  TODO.md  docker-compose.no_api.yml  expand.rs  opencode.jsonc  start-service.sh  start.sh
apis/anomaly_detector/: Cargo.toml
apis/anomaly_detector/src/: handlers.rs  main.rs  models.rs  routes.rs
apis/auth/: Cargo.toml  IMPROVEMENTS.md  note.md  test.rest
apis/auth/src/: app.rs  doc.rs  main.rs  permission.rs
apis/auth/src/routes/: active_code.rs  auth_code.rs  authentication.rs  client.rs  field_permission.rs  login.rs  mod.rs  permission.rs  profile.rs  register.rs  role.rs  scope.rs  signup.rs  token.rs  user.rs
apis/auth/tests/: app_test.rs  auth_code_test.rs  authentication_test.rs  client_test.rs  permission_test.rs  role_test.rs  scope_test.rs  token_test.rs  user_test.rs
apis/bakery/: Cargo.toml  test.rest
apis/bakery/src/: app.rs  doc.rs  main.rs  permission.rs
apis/bakery/src/routes/: baker.rs  bakery.rs  cake.rs  cake_bakers.rs  customer.rs  lineitem.rs  mod.rs  order.rs
apis/email-template/: Cargo.toml  test.rest
apis/email-template/src/: app.rs  doc.rs  lib.rs  main.rs  permission.rs
apis/email-template/src/routes/: client.rs  email_template.rs  mod.rs  template_placeholder.rs  template_translation.rs
apis/email-template/tests/: app_test.rs  email_template_test.rs  template_placeholder_test.rs  template_translation_test.rs
apis/event/: Cargo.toml  test.rest
apis/event/src/: app.rs  doc.rs  main.rs  permission.rs
apis/event/src/routes/: event.rs
apis/lookup/: Cargo.toml  README.md  test.rest
apis/lookup/src/: app.rs  doc.rs  lib.rs  middleware.rs  permission.rs
apis/lookup/src/routes/: lookup_item.rs  lookup_item_translation.rs  lookup_type.rs  mod.rs
apis/lookup/tests/: app_test.rs  field_filter_test.rs  lookup_item_test.rs  lookup_item_translation_test.rs  lookup_type_test.rs  middleware_test.rs
apis/merchant/: Cargo.toml  test.rest
apis/merchant/src/: app.rs  doc.rs  permission.rs
apis/merchant/src/routes/: api_key.rs  merchant.rs  mod.rs  webhook.rs
apis/notification/: Cargo.toml
apis/notification/src/: app.rs  doc.rs  main.rs
apis/paypments/stripe/: Cargo.toml  README.md  test.rest
apis/paypments/stripe/src/: app.rs  doc.rs  main.rs  permission.rs
apis/profile/: Cargo.toml  test.rest
apis/profile/src/: app.rs  doc.rs  lib.rs  permission.rs
apis/profile/src/routes/: mod.rs  profile.rs  social_link.rs  user_preference.rs
apis/profile/tests/: app_test.rs  profile_test.rs  social_link_test.rs  user_preference_test.rs
apis/url-shortener/: Cargo.toml  test.rest
apis/url-shortener/src/: app.rs  doc.rs  error_page.rs  lib.rs  main.rs  middleware.rs  permission.rs
apis/url-shortener/src/routes/: api_key.rs  mod.rs  redirect.rs  shortened_url.rs  url_click.rs
apis/url-shortener/tests/: api_key_test.rs  redirect_test.rs  shortened_url_test.rs
apis/wallet/: Cargo.toml
apis/wallet/src/: app.rs  doc.rs  main.rs  middleware.rs  permission.rs  test.rest
apis/wallet/src/consumers/: mod.rs
apis/wallet/src/routes/: idempotency.rs  mod.rs  mod_impl.rs  p2p_transfer.rs  top_up_transaction.rs  transaction.rs  wallet.rs  withdrawal.rs
apps/auth-notification/: Cargo.toml  test.rest
apps/auth-notification/src/: app.rs  email.rs  main.rs
apps/auth-notification/src/consumer/: error.rs  handler.rs
apps/auth-web/: Cargo.toml  package.json  tailwind.css  test.rest
apps/auth-web/assets/: tailwind.css
apps/auth-web/locales/: en-US.ftl  vi-VN.ftl
apps/auth-web/src/: main.rs
apps/auth-web/src/models/: authenticate.rs  context.rs  mod.rs  request.rs  state.rs
apps/auth-web/src/routes/: home.rs  login.rs  mod.rs  root.rs  signup.rs
apps/auth-web/src/services/: authenticate.rs
apps/auth-web/src/ui/: link.rs  mod.rs
apps/auth-web/src/views/: authenticate.rs  blog.rs  error.rs  login.rs  mod.rs  signup.rs
apps/auth_web/: Cargo.toml  Dioxus._toml
apps/auth_web/assets/: main.css
apps/auth_web/src/: main.rs
apps/auth_web/src/models/: authenticate.rs
apps/auth_web/src/views/: authenticate.rs
apps/gateway/: Cargo.toml  README.md  test.rest
apps/gateway/config/: config.yaml  dn-config.yaml
apps/gateway/src/: main.rs  poller.rs
apps/gateway/src/config/: app_config.rs  dakia_config.rs  dn_config.rs  mod.rs  upstream.rs
apps/gateway/src/error/: immut_str.rs  mod.rs  result.rs
apps/gateway/src/gateway/: mod.rs  state.rs
apps/gateway/src/shared/: dakia_state.rs  mutable_registry.rs  pattern_matcher.rs  pattern_registry.rs
apps/notification/: Cargo.toml
apps/notification/src/: app.rs  consumer.rs  main.rs
apps/notification/src/consumer/: event.rs  handler.rs  message.rs  mod.rs  task.rs
apps/notification/src/websocket/: handler.rs  mod.rs
features/auth/entities/: Cargo.toml
features/auth/entities/src/: access.rs  active_code.rs  auth_code.rs  authentication.rs  client.rs  client_scope.rs  demo_macro.rs  field_permission.rs  lib.rs  permission.rs  role.rs  role_permission.rs  scope.rs  token.rs  user.rs
features/auth/migrations/: Cargo.toml  Database-Scheme.md
features/auth/migrations/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_id_version_index.rs  m20250424_create_role.rs  m20250425_create_access.rs  m20250426_create_access_key.rs  m20250725_upgrade_to_oauth2.rs  m20251031_create_authentication_requests.rs  m20251127_add_client_id_into_role.rs  m20251127_add_created_at_updated_at_to_access.rs  m20251225_add_active_code_table.rs  m20251227_add_user_id_to_active_code_table_and_client_key_to_client_table.rs  m20251231_add_language_to_user.rs  (+8 more)
features/auth/model/: Cargo.toml
features/auth/remote/: Cargo.toml
features/auth/service/: Cargo.toml
features/bakery/entities/: Cargo.toml
features/bakery/migrations/: Cargo.toml
features/bakery/service/: Cargo.toml
features/booking/entities/: Cargo.toml
features/booking/service/: Cargo.toml
features/email-template/entities/: Cargo.toml
features/email-template/migrations/: Cargo.toml
(+1206 files in other folders)
