[workspace]
resolver = "2"
autobins = false
rust-version = "1.85.0"
members = [
    # Tools
    "libs/tools/dn-consul",

    "libs/shared/shared/data/app",
    "libs/shared/shared/data/auth",
    "libs/shared/shared/data/cache",
    "libs/shared/shared/data/core",
    "libs/shared/shared/data/error",

    "libs/shared/shared/app",
    "libs/shared/shared/auth",
    "libs/shared/shared/config",

    
    "libs/shared/shared/macro",
    "libs/shared/shared/macro-rule",
    "libs/shared/shared/middleware",

    "features/auth/entities", 
    "features/auth/migrations", 
    "features/auth/model", 
    "features/auth/repo", 
    "features/auth/service", 
    "features/auth/remote", 
    "features/auth/stream", 

    "features/notification/model", 
    "features/notification/stream", 

    "features/bakery/entities", 
    "features/bakery/migrations", 
    "features/bakery/model", 
    "features/bakery/service", 


    "features/email-template/entities", 
    "features/email-template/migrations", 
    "features/email-template/model", 
    "features/email-template/repo", 
    "features/email-template/service", 
    "features/email-template/remote", 

    "apis/auth", 
    "apis/bakery", 
    "apis/email-template",
    "apis/notification",
    "apps/auth-notification",
    "apps/auth-web",
    "apps/gateway", 
    "apps/notification"
 
 ]



[workspace.package]
version = "0.0.1"
authors = ["NGHIA NDD"]

[workspace.dependencies]
arc-swap = "1.7.1"
argon2 = "0.5.3"
anyhow = { version ="1.0.100" }
async-std = { version = "1", features = ["attributes"] }
async-trait = { version = "0.1.86" }
axum = { version = "0.8.0" }
axum-extra = { version = "0.8.0" }
axum-tracing-opentelemetry = { version = "0.32" }
base64 = "0.22.1"
bytes = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "3.2.25", features = ["derive"] }
config = { version = "0.15.11"}
local-ip-address  = { version = "0.6.5"}
crossbeam-epoch = "0.9.18"
dashmap = "6.1.0"
dotenv = "0.15.0"
dioxus = { version = "0.7.0", features = ["fullstack"] }
dioxus-i18n = { version = "0.5.0" }
futures-util = "0.3.31"
http = { version = "1.0.0" }
jsonwebtoken = "9.3.1"
lettre = { version = "0.11"}
log = "0.4"
once_cell = "1.20.2"
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto"] }
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
opentelemetry-appender-tracing = { version = "0.31.0"}
pcre2 = "0.2.9"
pingora = { version = "0.5.0", features = ["lb"] }
pingora-core = { version = "0.5.0" }
pingora-http = { version = "0.5.0" }
pingora-proxy = { version = "0.5.0" }
quote = "1.0"
rand = "0.8.5"
redis = { version = "0.32.7", features = ["tokio-comp", "tokio-native-tls-comp"] }
rust_decimal = { version = "1.37.1" }
#resend-rs = { version = "0.19.0" }
rdkafka = { version = "0.37.0" }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4"}
reqwest-retry = { version = "0.7"}
sea-orm = { version = "1.1.0" }
sea-orm-migration = { version = "1.1.0" }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.139"
serde_qs = { version = "0.15.0" }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
syn = "2.0"
thiserror = { version="2" }
tokio = { version="1", features = ["full"] }
tower-sessions = { version="0.14.0" }
time = { version="0.3.31" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.17"}
tracing-opentelemetry = { version = "0.32.0"}
tracing-appender = { version = "0.2.4" }

unic-langid = { version = "0.9" }
utoipa = { version = "5.3.1", features = ["chrono", "axum_extras"] }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
wildmatch = "2.4.0"


shared-shared-data-app = { path = "./libs/shared/shared/data/app"}
shared-shared-data-auth = { path = "./libs/shared/shared/data/auth"}
shared-shared-data-cache = { path = "./libs/shared/shared/data/cache"}
shared-shared-data-core = { path = "./libs/shared/shared/data/core"}
shared-shared-data-error = { path = "./libs/shared/shared/data/error"}

shared-shared-app = { path = "./libs/shared/shared/app"}
shared-shared-auth = { path = "./libs/shared/shared/auth"}
shared-shared-config = { path = "./libs/shared/shared/config"}
shared-shared-macro = { path = "./libs/shared/shared/macro"}
shared-shared-macro-rule = { path = "./libs/shared/shared/macro-rule"}
shared-shared-middleware = { path = "./libs/shared/shared/middleware"}


# Auth Feature
features-auth-entities = { path = "./features/auth/entities"}
features-auth-migrations = { path = "./features/auth/migrations"}
features-auth-model = { path = "./features/auth/model"}
features-auth-repo = { path = "./features/auth/repo"}
features-auth-service = { path = "./features/auth/service"}
features-auth-remote = { path = "./features/auth/remote"}
features-auth-stream = { path = "./features/auth/stream"}

# Email Template Feature
features-email-template-entities = { path = "./features/email-template/entities"}
features-email-template-migrations = { path = "./features/email-template/migrations"}
features-email-template-model = { path = "./features/email-template/model"}
features-email-template-repo = { path = "./features/email-template/repo"}
features-email-template-service = { path = "./features/email-template/service"}
features-email-template-remote = { path = "./features/email-template/remote"}

# Notification Feature
features-notification-model = { path = "./features/notification/model"}
features-notification-stream = { path = "./features/notification/stream"}

# Bakery Feature
features-bakery-entities = { path = "./features/bakery/entities"}
features-bakery-migrations = { path = "./features/bakery/migrations"}
features-bakery-model = { path = "./features/bakery/model"}
features-bakery-service = { path = "./features/bakery/service"}

# Tools
dn-consul = { path = "./libs/tools/dn-consul"}

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


