[workspace]
resolver = "2"
autobins = false
rust-version = "1.85.0"
members = [
    # Tools
    "libs/tools/dn-consul",

    "libs/shared/shared/data/app",
    "libs/shared/shared/data/auth",
    "libs/shared/shared/data/cache",
    "libs/shared/shared/data/core",
    "libs/shared/shared/data/error",

    "libs/shared/shared/app",
    "libs/shared/shared/observability",
    "libs/shared/shared/auth",
    "libs/shared/shared/config",

    
    "libs/shared/shared/macro",
    "libs/shared/shared/macro-rule",
    "libs/shared/shared/middleware",

    "features/auth/entities", 
    "features/auth/migrations", 
    "features/auth/model", 
    "features/auth/repo", 
    "features/auth/service", 
    "features/auth/remote", 
    "features/auth/stream", 
    
    "features/booking/entities", 
    "features/booking/model", 
    "features/booking/migrations", 
    "features/booking/repo", 
    "features/booking/service", 

    "features/event/entities", 
    "features/event/migrations", 
    "features/event/model", 
    "features/event/repo", 
    "features/event/service", 
    "features/event/stream", 

    "features/inventory/entities", 
    "features/inventory/migrations", 
    "features/inventory/model", 
    "features/inventory/repo", 
    "features/inventory/service", 


    "features/profiles/entities", 
    "features/profiles/migrations", 
    "features/profiles/model", 
    "features/profiles/repo", 
    "features/profiles/service", 

    "features/translation/entities", 
    "features/translation/migrations", 
    "features/translation/model", 
    "features/translation/repo", 
    "features/translation/service", 

    "features/notification/model", 
    "features/notification/stream", 

    "features/bakery/entities", 
    "features/bakery/migrations", 
    "features/bakery/model", 
    "features/bakery/service", 


    "features/email-template/entities", 
    "features/email-template/migrations", 
    "features/email-template/model", 
    "features/email-template/repo", 
    "features/email-template/service", 
    "features/email-template/remote", 

    "apis/auth", 
    "apis/profile", 
    "apis/translation",
    "apis/bakery", 
    "apis/translation", 
    "apis/email-template",
    "apis/event",
    "apis/inventory",
    "apis/booking",
    "apis/notification",
    "apps/auth-notification",
    "apps/auth-web",
    "apps/gateway", 
    "apps/notification"
 
 ]



[workspace.package]
version = "0.0.1"
authors = ["NGHIA NDD"]

[workspace.dependencies]
anyhow = { version ="1.0.100" }
arc-swap = "1.7.1"
argon2 = "0.5.3"
async-std = { version = "1", features = ["attributes"] }
async-trait = { version = "0.1.86" }
axum = { version = "0.8.0" }
axum-extra = { version = "0.8.0" }
axum-otel-metrics = { version = "0.12.0" }
axum-tracing-opentelemetry = { version = "0.32" }
base64 = "0.22.1"
bytes = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "3.2.25", features = ["derive"] }
config = { version = "0.15.11"}
crossbeam-epoch = "0.9.18"
dashmap = "6.1.0"
dioxus = { version = "0.7.0", features = ["fullstack"] }
dioxus-i18n = { version = "0.5.0" }
dotenv = "0.15.0"
futures-util = "0.3.31"
http = { version = "1.0.0" }
http-body = { version = "1.0"}
jsonwebtoken = { version = "10.2" }
lettre = { version = "0.11"}
local-ip-address  = { version = "0.6.5"}
log = "0.4"
once_cell = "1.20.2"
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-appender-tracing = { version = "0.31.0"}
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto"] }
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
pcre2 = "0.2.9"
pingora = { version = "0.5.0", features = ["lb"] }
pingora-core = { version = "0.5.0" }
pingora-http = { version = "0.5.0" }
pingora-proxy = { version = "0.5.0" }
quote = "1.0"
rand = "0.8.5"
rdkafka = { version = "0.37.0" }
redis = { version = "0.32.7", features = ["tokio-comp", "tokio-native-tls-comp"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4"}
reqwest-retry = { version = "0.7"}
rust_decimal = { version = "1.37.1" }
sea-orm = { version = "2.0.0-rc.31" }
sea-orm-migration = { version = "2.0.0-rc.31" }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.139"
serde_qs = { version = "0.15.0" }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
syn = "2.0"
thiserror = { version="2" }
time = { version="0.3.31" }
tokio = { version="1", features = ["full"] }
tower-sessions = { version="0.14.0" }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.4" }
tracing-opentelemetry = { version = "0.32.0"}
tracing-subscriber = { version = "0.3.17"}
unic-langid = { version = "0.9" }
url = { version = "2.5" }
utoipa = { version = "5.3.1", features = ["chrono", "axum_extras"] }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
wildmatch = "2.4.0"



shared-shared-data-app = { path = "./libs/shared/shared/data/app"}
shared-shared-data-auth = { path = "./libs/shared/shared/data/auth"}
shared-shared-data-cache = { path = "./libs/shared/shared/data/cache"}
shared-shared-data-core = { path = "./libs/shared/shared/data/core"}
shared-shared-data-error = { path = "./libs/shared/shared/data/error"}

shared-shared-app = { path = "./libs/shared/shared/app"}
shared-shared-observability = { path = "./libs/shared/shared/observability"}
shared-shared-auth = { path = "./libs/shared/shared/auth"}
shared-shared-config = { path = "./libs/shared/shared/config"}
shared-shared-macro = { path = "./libs/shared/shared/macro"}
shared-shared-macro-rule = { path = "./libs/shared/shared/macro-rule"}
shared-shared-middleware = { path = "./libs/shared/shared/middleware"}


# Auth Feature
features-auth-entities = { path = "./features/auth/entities"}
features-auth-migrations = { path = "./features/auth/migrations"}
features-auth-model = { path = "./features/auth/model"}
features-auth-repo = { path = "./features/auth/repo"}
features-auth-service = { path = "./features/auth/service"}
features-auth-remote = { path = "./features/auth/remote"}
features-auth-stream = { path = "./features/auth/stream"}

# Booking Feature
features-booking-entities = { path = "./features/booking/entities"}
features-booking-model = { path = "./features/booking/model"}
features-booking-migrations = { path = "./features/booking/migrations"}
features-booking-repo = { path = "./features/booking/repo"}
features-booking-service = { path = "./features/booking/service"}

# Event Feature
features-event-entities = { path = "./features/event/entities"}
features-event-migrations = { path = "./features/event/migrations"}
features-event-model = { path = "./features/event/model"}
features-event-repo = { path = "./features/event/repo"}
features-event-service = { path = "./features/event/service"}
features-event-stream = { path = "./features/event/stream"}

# Inventory Feature
features-inventory-entities = { path = "./features/inventory/entities"}
features-inventory-migrations = { path = "./features/inventory/migrations"}
features-inventory-model = { path = "./features/inventory/model"}
features-inventory-repo = { path = "./features/inventory/repo"}
features-inventory-service = { path = "./features/inventory/service"}

# Profile Feature
features-profiles-entities = { path = "./features/profiles/entities"}
features-profiles-migrations = { path = "./features/profiles/migrations"}
features-profiles-model = { path = "./features/profiles/model"}
features-profiles-repo = { path = "./features/profiles/repo"}
features-profiles-service = { path = "./features/profiles/service"}

# Translation Feature
features-translation-entities = { path = "./features/translation/entities"}
features-translation-migrations = { path = "./features/translation/migrations"}
features-translation-model = { path = "./features/translation/model"}
features-translation-repo = { path = "./features/translation/repo"}
features-translation-service = { path = "./features/translation/service"}

# Email Template Feature
features-email-template-entities = { path = "./features/email-template/entities"}
features-email-template-migrations = { path = "./features/email-template/migrations"}
features-email-template-model = { path = "./features/email-template/model"}
features-email-template-repo = { path = "./features/email-template/repo"}
features-email-template-service = { path = "./features/email-template/service"}
features-email-template-remote = { path = "./features/email-template/remote"}

# Notification Feature
features-notification-model = { path = "./features/notification/model"}
features-notification-stream = { path = "./features/notification/stream"}

# Bakery Feature
features-bakery-entities = { path = "./features/bakery/entities"}
features-bakery-migrations = { path = "./features/bakery/migrations"}
features-bakery-model = { path = "./features/bakery/model"}
features-bakery-service = { path = "./features/bakery/service"}

# Tools
dn-consul = { path = "./libs/tools/dn-consul"}

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


