[package]
name = "api-anomaly-detector"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "api-anomaly-detector"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
redis = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
