[package]
name = "api-merchant"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
utoipa = { workspace = true, features = ["chrono", "axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

async-trait = { workspace = true }
chrono = { workspace = true , features = ["serde"] }
dotenv = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-async-std", "debug-print"] }
uuid = { version = "1.13.2", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

shared-shared-config = { workspace = true }
shared-shared-app = { workspace = true }
shared-shared-auth = { workspace = true }
shared-shared-data-core = { workspace = true }
shared-shared-data-error = { workspace = true }
shared-shared-data-app = { workspace = true }

features-auth-remote = { workspace = true }

features-merchant-migrations = { workspace = true }
features-merchant-model = { workspace = true }
features-merchant-entities = { workspace = true }
features-merchant-repo = { workspace = true }
features-merchant-service = { workspace = true }
features-merchant-stream = { workspace = true }
