
[package]
name = "api-notification"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
serde = {  workspace = true , features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}
utoipa = { workspace = true, features = ["chrono", "axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["v4"] }

shared-shared-config = { workspace = true }
shared-shared-app = { workspace = true }
